--- a/Tyre'_BeardProject11End.ipynb
+++ b/Tyre'_BeardProject11End.ipynb
@@ -28,7 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# FastCarts Tranaction Prediction"
+        "# FastCarts Transaction Prediction"
       ],
       "metadata": {
         "id": "cJG_e1vK2NMI"
